# godot_material_x

./: .gitignore  CMakeLists.txt  JsMaterialXGenShader.data  JsMaterialXGenShader.js  JsMaterialXGenShader.wasm  README.md  SConstruct  SCsub  config.py  index.html  main.js  material.cpp  material.h  material_x_3d.cpp  material_x_3d.h  register_types.cpp  register_types.h
.github/workflows/: main.yml
documents/DeveloperGuide/: MainPage.md  Viewer.md
libraries/bxdf/: gltf_pbr.mtlx
resources/Materials/Examples/glTFPBR/: gltf_pbr_boombox.mtlx  gltf_pbr_default.mtlx
source/MaterialXBake/: CMakeLists.txt  Main.cpp  Material.cpp  Material.h
source/MaterialXCore/: Types.h
source/MaterialXRender/: Mesh.h  OiioImageLoader.cpp
source/MaterialXRenderGlsl/: GlslRenderer.cpp  GlslRenderer.h  TextureBaker.cpp  TextureBaker.h
source/MaterialXView/: Main.cpp  Viewer.cpp  Viewer.h
